[package]
name = "tokenless-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for LLM schema and response compression"

[[bin]]
name = "tokenless"
path = "src/main.rs"

[dependencies]
tokenless-schema = { path = "../tokenless-schema" }
tokenless-stats = { path = "../tokenless-stats" }
clap.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
