[package]
name = "tokenless-history"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "History compression and trimming for LLM agent context optimization"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["serde"] }